# mag

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
app/: agent.py  anonymize.py  chunking.py  config.py  db.py  embeddings.py  evaluation.py  generation.py  indexing.py  llm.py  main.py  metrics.py  migrate.py  mock_crm.py  pipeline.py  repository.py  retrieval.py  schemas.py  tools.py
app/queue/: producer.py  worker.py
data/: README.md  eval_3b.json  eval_7b.json  eval_fast.json  eval_full.json  eval_gemma3n.json  eval_gemma4.json  eval_llama8b.json  eval_sweep.json
data/kb/: dostavka.md  groshova_dopomoga.md  humanitarni_nabory.md  oplata.md  povernennia.md  pravova_dopomoga.md  prytulok_zhytlo.md  psyhosocialna_pidtrymka.md  reestratsiya_vpo.md
data/requests/: hotline_requests.jsonl
docker/: entrypoint.sh
migrations/: 001_init.sql  002_pgqueuer.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: hotline.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
tests/: test_anonymize.py  test_chunking.py
ui/: index.html
