[project]
name = "crm-hotline-ai"
version = "0.1.0"
description = "Сервісна система обробки запитів на основі RAG з локальною LLM (магістерська робота)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "pgqueuer>=0.13",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "prometheus-client>=0.20",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
pii = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
